# AgentGate

./: .env.example  .gitignore  LICENSE  README.md  architecture_diagram.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentgate/: __init__.py  audit.py  config.py  findings.py  graph.py  models.py  policies.py  splunk_client.py
agentgate/middleware/: __init__.py  blast_radius.py  cost.py  injection.py  pipeline.py  policy.py  reasoning.py
docs/: architecture.md  comparison.md
scripts/: build_app.py  demo.py  install_dashboard.py  install_lookups.py  probe_blast_radius.py  seed_splunk.py  smoke_test_mcp.py  smoke_test_ollama.py  smoke_test_splunk.py  validate_all.py
splunk_app/agentgate/: README.txt
splunk_app/agentgate/default/: app.conf  collections.conf  savedsearches.conf  transforms.conf
splunk_app/agentgate/default/data/ui/views/: agentgate_audit.xml
tests/: conftest.py  test_injection.py  test_latency.py  test_pipeline.py
tests/corpora/: injection_negative.txt  injection_out_of_scope.txt  injection_positive.txt
